задача6
